# libmixmod

./: .gitignore  CMakeLists.txt  Makefile  README
EXAMPLES/: CMakeLists.txt
EXAMPLES/clustering/: clustering_1.cpp  clustering_1.txt  clustering_10.cpp  clustering_10.txt  clustering_11.cpp  clustering_11.txt  clustering_12.cpp  clustering_12.txt  clustering_13.cpp  clustering_13.txt  clustering_14.cpp  clustering_14.txt  clustering_2.cpp  clustering_2.txt  clustering_3.cpp  clustering_3.txt  clustering_4.cpp  clustering_4.txt  clustering_5.cpp  clustering_5.txt  clustering_6.cpp  clustering_6.txt  clustering_7.cpp  clustering_7.txt  clustering_8.cpp  clustering_8.txt  clustering_9.cpp  clustering_9.txt
EXAMPLES/discriminant_analysis/: discriminant_analysis_1.cpp  discriminant_analysis_1.txt  discriminant_analysis_2.cpp  discriminant_analysis_2.txt  discriminant_analysis_3.cpp  discriminant_analysis_3.txt  discriminant_analysis_4.cpp  discriminant_analysis_4.txt  discriminant_analysis_5.cpp  discriminant_analysis_5.txt
SRC/: CMakeLists.txt
SRC/NEWMAT/: bandmat.cpp  cholesky.cpp  evalue.cpp  hholder.cpp  include.h  jacobi.cpp  newmat2.cpp  newmat8.cpp  newmatnl.cpp  precisio.h  solution.cpp  svd.cpp
SRC/mixmod/Clustering/: ClusteringInput.cpp  ClusteringInput.h  ClusteringMain.cpp  ClusteringModelOutput.cpp  ClusteringModelOutput.h  ClusteringOutput.cpp  ClusteringOutput.h  ClusteringStrategy.cpp  ClusteringStrategy.h  ClusteringStrategyInit.cpp  ClusteringStrategyInit.h
SRC/mixmod/DiscriminantAnalysis/Learn/: LearnInput.cpp  LearnInput.h  LearnMain.cpp  LearnModelOutput.cpp  LearnModelOutput.h  LearnOutput.cpp  LearnOutput.h
SRC/mixmod/DiscriminantAnalysis/Predict/: PredictInput.cpp  PredictMain.cpp  PredictModelOutput.cpp  PredictModelOutput.h
SRC/mixmod/Kernel/Algo/: Algo.cpp  Algo.h  CEMAlgo.cpp  CEMAlgo.h  EMAlgo.cpp  EMAlgo.h  MAPAlgo.cpp  MAPAlgo.h  MAlgo.cpp  MAlgo.h  SEMAlgo.cpp  SEMAlgo.h
SRC/mixmod/Kernel/Criterion/: BICCriterion.cpp  CVCriterion.cpp  CVCriterion.h  CriterionOutput.cpp  CriterionOutput.h  ICLCriterion.cpp  NECCriterion.cpp
SRC/mixmod/Kernel/IO/: BinaryData.cpp  BinaryData.h  BinarySample.cpp  BinarySample.h  ColumnDescription.cpp  ColumnDescription.h  CompositeData.cpp  Data.cpp  Data.h  DataDescription.cpp  DataDescription.h  Description.cpp  Description.h  GaussianData.cpp  GaussianData.h  GaussianSample.cpp  GaussianSample.h  IndividualColumnDescription.cpp  IndividualColumnDescription.h  Input.cpp  Input.h  Label.cpp  Label.h  LabelDescription.cpp  LabelDescription.h  LikelihoodOutput.cpp  LikelihoodOutput.h  ModelOutput.cpp  ModelOutput.h  ParameterDescription.cpp  ParameterDescription.h  Partition.cpp  Partition.h  Proba.cpp  Proba.h  ProbaDescription.cpp  ProbaDescription.h  ProbaOutput.cpp  ProbaOutput.h  QualitativeColumnDescription.cpp  (+9 more)
SRC/mixmod/Kernel/Model/: BinaryModel.cpp  BinaryModel.h  Model.cpp  Model.h  ModelType.cpp  ModelType.h
SRC/mixmod/Kernel/Parameter/: BinaryEParameter.cpp  BinaryEParameter.h  BinaryEjParameter.cpp  BinaryEjParameter.h  BinaryEkParameter.cpp  BinaryEkParameter.h  BinaryEkjParameter.cpp  BinaryEkjParameter.h  BinaryEkjhParameter.cpp  BinaryEkjhParameter.h  BinaryParameter.cpp  BinaryParameter.h  CompositeParameter.cpp  CompositeParameter.h  GaussianDiagParameter.cpp  GaussianDiagParameter.h  GaussianEDDAParameter.cpp  GaussianEDDAParameter.h  GaussianGeneralParameter.cpp  GaussianGeneralParameter.h  GaussianHDDAParameter.cpp  GaussianHDDAParameter.h  GaussianParameter.cpp  GaussianParameter.h  GaussianSphericalParameter.cpp  GaussianSphericalParameter.h  Parameter.cpp  Parameter.h
SRC/mixmod/Matrix/: DiagMatrix.cpp  DiagMatrix.h  GeneralMatrix.cpp  GeneralMatrix.h  Matrix.cpp  Matrix.h  SphericalMatrix.cpp  SphericalMatrix.h  SymmetricMatrix.cpp  SymmetricMatrix.h
SRC/mixmod/Utilities/: ExampleDataUtil.cpp  ExampleDataUtil.h  Random.cpp  Random.h  Util.cpp  Util.h
SRC/mixmod/Utilities/exceptions/: NumericException.h
SRC/mixmod/Utilities/maths/: Armadillo.h  Eigen.h  GSL.h  ITpp.h  NEWMAT.h
